// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convert deeplyCopy should convert array of nodes 1`] = `
Object {
  "amdDependencies": Array [],
  "bindDiagnostics": Array [],
  "bindSuggestionDiagnostics": undefined,
  "checkJsDirective": undefined,
  "endOfFileToken": Object {
    "loc": Object {
      "end": Object {
        "column": 12,
        "line": 1,
      },
      "start": Object {
        "column": 12,
        "line": 1,
      },
    },
    "range": Array [
      12,
      12,
    ],
    "transformFlags": 0,
    "type": "TSEndOfFileToken",
  },
  "externalModuleIndicator": undefined,
  "fileName": "text.ts",
  "hasNoDefaultLib": false,
  "identifierCount": 2,
  "identifiers": Map {
    "foo" => "foo",
    "T" => "T",
  },
  "isDeclarationFile": false,
  "languageVariant": 1,
  "languageVersion": 7,
  "libReferenceDirectives": Array [],
  "lineMap": Array [
    null,
  ],
  "loc": Object {
    "end": Object {
      "column": 12,
      "line": 1,
    },
    "start": Object {
      "column": 0,
      "line": 1,
    },
  },
  "nodeCount": 7,
  "parseDiagnostics": Array [],
  "pragmas": Map {},
  "range": Array [
    0,
    12,
  ],
  "referencedFiles": Array [],
  "scriptKind": 4,
  "statements": Array [
    Object {
      "expression": Object {
        "arguments": Array [],
        "callee": Object {
          "loc": Object {
            "end": Object {
              "column": 7,
              "line": 1,
            },
            "start": Object {
              "column": 4,
              "line": 1,
            },
          },
          "name": "foo",
          "range": Array [
            4,
            7,
          ],
          "type": "Identifier",
        },
        "loc": Object {
          "end": Object {
            "column": 12,
            "line": 1,
          },
          "start": Object {
            "column": 0,
            "line": 1,
          },
        },
        "range": Array [
          0,
          12,
        ],
        "type": "NewExpression",
        "typeParameters": Object {
          "loc": Object {
            "end": Object {
              "column": 10,
              "line": 1,
            },
            "start": Object {
              "column": 7,
              "line": 1,
            },
          },
          "params": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 9,
                  "line": 1,
                },
                "start": Object {
                  "column": 8,
                  "line": 1,
                },
              },
              "range": Array [
                8,
                9,
              ],
              "type": "TSTypeReference",
              "typeName": Object {
                "loc": Object {
                  "end": Object {
                    "column": 9,
                    "line": 1,
                  },
                  "start": Object {
                    "column": 8,
                    "line": 1,
                  },
                },
                "name": "T",
                "range": Array [
                  8,
                  9,
                ],
                "type": "Identifier",
              },
              "typeParameters": undefined,
            },
          ],
          "range": Array [
            7,
            10,
          ],
          "type": "TSTypeParameterInstantiation",
        },
      },
      "loc": Object {
        "end": Object {
          "column": 12,
          "line": 1,
        },
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "range": Array [
        0,
        12,
      ],
      "type": "ExpressionStatement",
    },
  ],
  "text": "new foo<T>()",
  "transformFlags": 0,
  "type": "TSSourceFile",
  "typeReferenceDirectives": Array [],
}
`;

exports[`convert deeplyCopy should convert node correctly 1`] = `
Object {
  "body": Array [
    Object {
      "id": Object {
        "loc": Object {
          "end": Object {
            "column": 8,
            "line": 1,
          },
          "start": Object {
            "column": 5,
            "line": 1,
          },
        },
        "name": "foo",
        "range": Array [
          5,
          8,
        ],
        "type": "Identifier",
      },
      "loc": Object {
        "end": Object {
          "column": 35,
          "line": 1,
        },
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "range": Array [
        0,
        35,
      ],
      "type": "TSTypeAliasDeclaration",
      "typeAnnotation": Object {
        "loc": Object {
          "end": Object {
            "column": 35,
            "line": 1,
          },
          "start": Object {
            "column": 11,
            "line": 1,
          },
        },
        "range": Array [
          11,
          35,
        ],
        "transformFlags": 0,
        "type": "TSJSDocNullableType",
        "typeAnnotation": Object {
          "loc": Object {
            "end": Object {
              "column": 35,
              "line": 1,
            },
            "start": Object {
              "column": 11,
              "line": 1,
            },
          },
          "range": Array [
            11,
            35,
          ],
          "type": "TSTypeAnnotation",
          "typeAnnotation": Object {
            "loc": Object {
              "end": Object {
                "column": 35,
                "line": 1,
              },
              "start": Object {
                "column": 12,
                "line": 1,
              },
            },
            "range": Array [
              12,
              35,
            ],
            "type": "TSUnionType",
            "types": Array [
              Object {
                "loc": Object {
                  "end": Object {
                    "column": 18,
                    "line": 1,
                  },
                  "start": Object {
                    "column": 12,
                    "line": 1,
                  },
                },
                "range": Array [
                  12,
                  18,
                ],
                "type": "TSTypeReference",
                "typeName": Object {
                  "loc": Object {
                    "end": Object {
                      "column": 15,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 12,
                      "line": 1,
                    },
                  },
                  "name": "foo",
                  "range": Array [
                    12,
                    15,
                  ],
                  "type": "Identifier",
                },
                "typeParameters": Object {
                  "loc": Object {
                    "end": Object {
                      "column": 18,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 15,
                      "line": 1,
                    },
                  },
                  "params": Array [
                    Object {
                      "loc": Object {
                        "end": Object {
                          "column": 17,
                          "line": 1,
                        },
                        "start": Object {
                          "column": 16,
                          "line": 1,
                        },
                      },
                      "range": Array [
                        16,
                        17,
                      ],
                      "type": "TSTypeReference",
                      "typeName": Object {
                        "loc": Object {
                          "end": Object {
                            "column": 17,
                            "line": 1,
                          },
                          "start": Object {
                            "column": 16,
                            "line": 1,
                          },
                        },
                        "name": "T",
                        "range": Array [
                          16,
                          17,
                        ],
                        "type": "Identifier",
                      },
                      "typeParameters": undefined,
                    },
                  ],
                  "range": Array [
                    15,
                    18,
                  ],
                  "type": "TSTypeParameterInstantiation",
                },
              },
              Object {
                "loc": Object {
                  "end": Object {
                    "column": 35,
                    "line": 1,
                  },
                  "start": Object {
                    "column": 21,
                    "line": 1,
                  },
                },
                "range": Array [
                  21,
                  35,
                ],
                "transformFlags": 0,
                "type": "TSJSDocNullableType",
                "typeAnnotation": Object {
                  "loc": Object {
                    "end": Object {
                      "column": 35,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 21,
                      "line": 1,
                    },
                  },
                  "range": Array [
                    21,
                    35,
                  ],
                  "type": "TSTypeAnnotation",
                  "typeAnnotation": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 35,
                        "line": 1,
                      },
                      "start": Object {
                        "column": 22,
                        "line": 1,
                      },
                    },
                    "range": Array [
                      22,
                      35,
                    ],
                    "transformFlags": 0,
                    "type": "TSJSDocNullableType",
                    "typeAnnotation": Object {
                      "loc": Object {
                        "end": Object {
                          "column": 34,
                          "line": 1,
                        },
                        "start": Object {
                          "column": 21,
                          "line": 1,
                        },
                      },
                      "range": Array [
                        21,
                        34,
                      ],
                      "type": "TSTypeAnnotation",
                      "typeAnnotation": Object {
                        "loc": Object {
                          "end": Object {
                            "column": 34,
                            "line": 1,
                          },
                          "start": Object {
                            "column": 22,
                            "line": 1,
                          },
                        },
                        "range": Array [
                          22,
                          34,
                        ],
                        "type": "TSParenthesizedType",
                        "typeAnnotation": Object {
                          "loc": Object {
                            "end": Object {
                              "column": 33,
                              "line": 1,
                            },
                            "start": Object {
                              "column": 23,
                              "line": 1,
                            },
                          },
                          "params": Array [],
                          "range": Array [
                            23,
                            33,
                          ],
                          "returnType": Object {
                            "loc": Object {
                              "end": Object {
                                "column": 33,
                                "line": 1,
                              },
                              "start": Object {
                                "column": 26,
                                "line": 1,
                              },
                            },
                            "range": Array [
                              26,
                              33,
                            ],
                            "type": "TSTypeAnnotation",
                            "typeAnnotation": Object {
                              "loc": Object {
                                "end": Object {
                                  "column": 33,
                                  "line": 1,
                                },
                                "start": Object {
                                  "column": 29,
                                  "line": 1,
                                },
                              },
                              "range": Array [
                                29,
                                33,
                              ],
                              "type": "TSVoidKeyword",
                            },
                          },
                          "type": "TSFunctionType",
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    },
  ],
  "loc": Object {
    "end": Object {
      "column": 35,
      "line": 1,
    },
    "start": Object {
      "column": 0,
      "line": 1,
    },
  },
  "range": Array [
    0,
    35,
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`convert deeplyCopy should convert node with decorators correctly 1`] = `
Object {
  "decorators": Array [
    Object {
      "expression": Object {
        "loc": Object {
          "end": Object {
            "column": 5,
            "line": 1,
          },
          "start": Object {
            "column": 1,
            "line": 1,
          },
        },
        "name": "test",
        "range": Array [
          1,
          5,
        ],
        "type": "Identifier",
      },
      "loc": Object {
        "end": Object {
          "column": 5,
          "line": 1,
        },
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "range": Array [
        0,
        5,
      ],
      "type": "Decorator",
    },
  ],
  "heritageClauses": undefined,
  "loc": Object {
    "end": Object {
      "column": 18,
      "line": 1,
    },
    "start": Object {
      "column": 0,
      "line": 1,
    },
  },
  "members": Array [],
  "modifiers": undefined,
  "name": Object {
    "loc": Object {
      "end": Object {
        "column": 15,
        "line": 1,
      },
      "start": Object {
        "column": 12,
        "line": 1,
      },
    },
    "name": "foo",
    "range": Array [
      12,
      15,
    ],
    "type": "Identifier",
  },
  "range": Array [
    0,
    18,
  ],
  "transformFlags": 0,
  "type": "TSClassDeclaration",
  "typeParameters": null,
}
`;

exports[`convert deeplyCopy should convert node with type arguments correctly 1`] = `
Object {
  "arguments": Array [],
  "expression": Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 1,
      },
      "start": Object {
        "column": 4,
        "line": 1,
      },
    },
    "name": "foo",
    "range": Array [
      4,
      7,
    ],
    "type": "Identifier",
  },
  "loc": Object {
    "end": Object {
      "column": 12,
      "line": 1,
    },
    "start": Object {
      "column": 0,
      "line": 1,
    },
  },
  "range": Array [
    0,
    12,
  ],
  "transformFlags": 0,
  "type": "TSNewExpression",
  "typeParameters": Object {
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 1,
      },
      "start": Object {
        "column": 7,
        "line": 1,
      },
    },
    "params": Array [
      Object {
        "loc": Object {
          "end": Object {
            "column": 9,
            "line": 1,
          },
          "start": Object {
            "column": 8,
            "line": 1,
          },
        },
        "range": Array [
          8,
          9,
        ],
        "type": "TSTypeReference",
        "typeName": Object {
          "loc": Object {
            "end": Object {
              "column": 9,
              "line": 1,
            },
            "start": Object {
              "column": 8,
              "line": 1,
            },
          },
          "name": "T",
          "range": Array [
            8,
            9,
          ],
          "type": "Identifier",
        },
        "typeParameters": undefined,
      },
    ],
    "range": Array [
      7,
      10,
    ],
    "type": "TSTypeParameterInstantiation",
  },
}
`;

exports[`convert deeplyCopy should convert node with type parameters correctly 1`] = `
Object {
  "heritageClauses": undefined,
  "loc": Object {
    "end": Object {
      "column": 15,
      "line": 1,
    },
    "start": Object {
      "column": 0,
      "line": 1,
    },
  },
  "members": Array [],
  "name": Object {
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 1,
      },
      "start": Object {
        "column": 6,
        "line": 1,
      },
    },
    "name": "foo",
    "range": Array [
      6,
      9,
    ],
    "type": "Identifier",
  },
  "range": Array [
    0,
    15,
  ],
  "transformFlags": 0,
  "type": "TSClassDeclaration",
  "typeParameters": Object {
    "loc": Object {
      "end": Object {
        "column": 12,
        "line": 1,
      },
      "start": Object {
        "column": 9,
        "line": 1,
      },
    },
    "params": Array [
      Object {
        "constraint": undefined,
        "default": undefined,
        "loc": Object {
          "end": Object {
            "column": 11,
            "line": 1,
          },
          "start": Object {
            "column": 10,
            "line": 1,
          },
        },
        "name": Object {
          "loc": Object {
            "end": Object {
              "column": 11,
              "line": 1,
            },
            "start": Object {
              "column": 10,
              "line": 1,
            },
          },
          "name": "T",
          "range": Array [
            10,
            11,
          ],
          "type": "Identifier",
        },
        "range": Array [
          10,
          11,
        ],
        "type": "TSTypeParameter",
      },
    ],
    "range": Array [
      9,
      12,
    ],
    "type": "TSTypeParameterDeclaration",
  },
}
`;
